# terminecraft

./: .gitignore  CMakeLists.txt  README.md
include/: catch.hpp  colors.h  game.h  game.hpp  vec3.h  vec3.hpp  vecs.h  vecs.hpp
src/: CMakeLists.txt  game.cpp  main.cpp  vec3.cpp  vecs.cpp
test/: test_game.cpp  test_vec3.cpp  test_vecs.cpp
tests/: tests.cpp  vec3_tests.cpp
